kustomize/overlay/dev/ingress-internal.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress-internal
  namespace: development-services
  annotations:
    konghq.com/methods: "GET,POST,PUT,PATCH,DELETE"
    konghq.com/strip-path: "true"
    konghq.com/preserve-host: "true"
spec:
  ingressClassName: kong-internal
  tls:
    - hosts:
        - hello-service.dev.swfs.cloud
        - hello-service-manage.dev.swfs.cloud
  rules:
    - host: hello-service.dev.swfs.cloud
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: hello-service
                port:
                  number: 8080
    - host: hello-service-manage.dev.swfs.cloud
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: hello-service
                port:
                  number: 8081
